kuberentes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: minijira-backend:latest  # 👑 Tumhari local image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend  # 👑 Frontend routing ya ingress ke liye name
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: backend
