kuberentes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minijira-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # 👑 Yeh line regex backend routing ko sahi se handle karegi
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: mini-jira.local
    http:
      paths:
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
